@@ -1,6 +1,2 @@
-balsa
-mozilla-firefox
-abiword
-gnumeric
 gpe-calendar
 gpe-contacts
