@@ -1,3 +1,12 @@
+2005-08-17  Florian Boor <florian@kernelconcepts.de>
+
+    * Add missing files to CVS.
+    * button-box.apps: Reduce to some essential apps.
+    * gpe-buttonbox.c: Cleanups, introduce config file.
+                       Make button slots and "My Files" button configurable.
+      TODO: Configuration dialog, turn text on/off.
+
+
 2005-08-12  Florian Boor <florian@kernelconcepts.de>
 
 	* Import of hopefully latest project version (51).
